--- a/public/assets/css/default.css
+++ b/public/assets/css/default.css
@@ -1,130 +1,8 @@
-body {
-    /*background: #fff;*/
-    margin: 0;
-    padding: 0;
-    line-height: 1.5;
-}
-
-body,
-input,
-button {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    color: #7E96B3;
-}
-
-.container {
-    max-width: 515px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-}
-
-a {
-    color: #18bc9c;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-h1 {
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-h2 {
-    font-size: 28px;
-    font-weight: normal;
-    color: #3C5675;
-    margin-bottom: 0;
-}
-
-form {
-    margin-top: 20px;
-}
-
-.form-group {
-    margin-bottom: 20px;
-}
-
-.form-group .form-field:first-child input {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-}
-
-.form-group .form-field:last-child input {
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-}
-
-.form-field input {
-    background: #EDF2F7;
-    margin: 0 0 1px;
-    border: 2px solid transparent;
-    transition: background 0.2s, border-color 0.2s, color 0.2s;
-    width: 100%;
-    padding: 15px 15px 15px 180px;
-    box-sizing: border-box;
-}
-
-.form-field input:focus {
-    border-color: #18bc9c;
-    background: #fff;
-    color: #444;
-    outline: none;
-}
-
-.form-field label {
-    float: left;
-    width: 160px;
-    text-align: right;
-    margin-right: -160px;
-    position: relative;
-    margin-top: 18px;
-    font-size: 14px;
-    pointer-events: none;
-    opacity: 0.7;
-}
-
-button,
-.btn {
-    background: #3C5675;
-    color: #fff;
-    border: 0;
-    font-weight: bold;
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 15px 30px;
-    -webkit-appearance: none;
-}
-
-button[disabled] {
-    opacity: 0.5;
-}
-
-#error,
-.error,
-#success,
-.success {
-    background: #D83E3E;
-    color: #fff;
-    padding: 15px 20px;
-    border-radius: 4px;
-    margin-bottom: 20px;
-}
-
-#success {
-    background: #3C5675;
-}
-
-#error a,
-.error a {
-    color: white;
-    text-decoration: underline;
-}
-
 #app {
     padding: 15px;
+}
+
+.center .el-form-item__content {
+    display: block;
+    margin: 0 auto !important;
 }
